🏘🌄 Checkpoint ./projects/published.json:63815372/8139 ./package.json:63815372/9863 ./.nvmrc:63815372/3 ./index.js:63815372/93

--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node -e \"console.log('Using Node.js version ' + process.version)\" && node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "14.x"
+  },
   "dependencies": {
     "@types/node": "^18.0.6",
     "body-parser": "^1.20.2",
