--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@types/node": "^18.0.6",
+    "bad-words": "^3.0.4",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
@@ -23,7 +24,10 @@
     "express-rate-limit": "^7.0.2",
     "jimp": "^0.22.10",
     "jszip": "^3.10.1",
-    "node-fetch": "^3.2.6",
+    "node-fetch": "^2",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
